--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -9,13 +9,16 @@
   </head>
   <body>
     <div>
-      <h1>Sobre mi</h1>
+      <h1>Sobre mi | Daniel Hurtado</h1>
     </div>
-    <div>
+    <div
+    style="display: flex;
+    align-items: center;
+    justify-content: center;">
       <img
         src="me.jpg"
         alt="Foto de perfil"
-        style="width: auto; height: 500px"
+        style="width: auto; height: 500px; "
       />
     </div>
     <div>
